Don't run test workflow on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,6 +138,9 @@ workflows:
       - validate_and_plan:
           context: ae-infra-manage
           requires: []
+          filters:
+            branches:
+              ignore: master
 
   deploy:
     jobs:
