Add custom status check to Github on Terraform runs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,18 @@ commands:
               -parallelism=<< parameters.parallelism >> \
               -out=<< parameters.out >> \
               -var vault_addr=${VAULT_ADDR:?} \
-              << parameters.path >>
+              << parameters.path >> | tee terraform-plan-info
+
+            export TERRAFORM_PLAN_INFO=$(cat terraform-plan-info | grep Plan:)
+            curl -X POST \
+              -H "Authorization: token ${GITHUB_TOKEN}" \
+              -d '{
+                "state": "success",
+                "target_url": "'""${CIRCLE_BUILD_URL}""'",
+                "description": "'"$TERRAFORM_PLAN_INFO"'",
+                "context": "terraform plan"
+              }' \
+              https://api.github.com/repos/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/statuses/${CIRCLE_SHA1}
       - persist_to_workspace:
           root: << parameters.plans_workspace >>
           paths:
