--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ commands:
       - run:
           name: Add status check to Github
           command: |
-            export TERRAFORM_PLAN_INFO=$(printf "%s" "$(cat terraform-plan-info | grep Plan:)")
+            export TERRAFORM_PLAN_INFO=$(printf "%s" "$(cat terraform-plan-info | grep Plan: | sed 's/\x1b\[[0-9;]*[a-zA-Z]//g')")
             curl -X POST \
               -H "Authorization: token ${GITHUB_TOKEN}" \
               -d '{
