Remove printf command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ commands:
               -var vault_addr=${VAULT_ADDR:?} \
               << parameters.path >> | tee terraform-plan-info
 
-            export TERRAFORM_PLAN_INFO=$(printf "%s" "$(cat terraform-plan-info | grep Plan: | sed 's/\x1b\[[0-9;]*[a-zA-Z]//g')")
+            export TERRAFORM_PLAN_INFO=`cat terraform-plan-info | grep Plan: | sed 's/\x1b\[[0-9;]*[a-zA-Z]//g'`
             curl -X POST \
               -H "Authorization: token ${GITHUB_TOKEN}" \
               -d '{
