Remove ths Github status check response from console output

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,13 +74,14 @@ commands:
             export TERRAFORM_PLAN_INFO=`cat terraform-plan-info | grep Plan: | sed 's/\x1b\[[0-9;]*[a-zA-Z]//g'`
             curl -X POST \
               -H "Authorization: token ${GITHUB_TOKEN}" \
+              -s \
               -d '{
                 "state": "success",
                 "target_url": "'"${CIRCLE_BUILD_URL}"'",
                 "description": "'"${TERRAFORM_PLAN_INFO}"'",
                 "context": "terraform plan"
               }' \
-              https://api.github.com/repos/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/statuses/${CIRCLE_SHA1}
+              https://api.github.com/repos/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/statuses/${CIRCLE_SHA1} > /dev/null
 
       - persist_to_workspace:
           root: << parameters.plans_workspace >>
