Update CI context

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,7 +147,7 @@ workflows:
   test:
     jobs:
       - validate_and_plan:
-          context: ae-infra-manage
+          context: ae-vault-infra
           requires: []
           filters:
             branches:
@@ -156,7 +156,7 @@ workflows:
   deploy:
     jobs:
       - plan:
-          context: ae-infra-manage
+          context: ae-vault-infra
           requires: []
           filters:
             branches:
@@ -170,7 +170,7 @@ workflows:
               only: master
 
       - apply:
-          context: ae-infra-manage
+          context: ae-vault-infra
           requires:
             - plan
             - hodl
